lib/document/ffi/document_ffi.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Dart API for using Document
class DocumentFfi {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DocumentFfi(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DocumentFfi.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int tagion_document(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<Element> element,
  ) {
    return _tagion_document(
      buf,
      buf_len,
      key,
      key_len,
      element,
    );
  }

  late final _tagion_documentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<Element>)>>('tagion_document');
  late final _tagion_document = _tagion_documentPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<Element>)>();

  int tagion_document_get_version(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    ffi.Pointer<ffi.Uint32> ver,
  ) {
    return _tagion_document_get_version(
      buf,
      buf_len,
      ver,
    );
  }

  late final _tagion_document_get_versionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Uint64,
              ffi.Pointer<ffi.Uint32>)>>('tagion_document_get_version');
  late final _tagion_document_get_version =
      _tagion_document_get_versionPtr.asFunction<
          int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint32>)>();

  int tagion_document_get_record_name(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    ffi.Pointer<ffi.Pointer<ffi.Char>> record_name,
    ffi.Pointer<ffi.Uint64> record_name_len,
  ) {
    return _tagion_document_get_record_name(
      buf,
      buf_len,
      record_name,
      record_name_len,
    );
  }

  late final _tagion_document_get_record_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_record_name');
  late final _tagion_document_get_record_name =
      _tagion_document_get_record_namePtr.asFunction<
          int Function(ffi.Pointer<ffi.Uint8>, int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_valid(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    ffi.Pointer<ffi.Int32> error_code,
  ) {
    return _tagion_document_valid(
      buf,
      buf_len,
      error_code,
    );
  }

  late final _tagion_document_validPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Uint64,
              ffi.Pointer<ffi.Int32>)>>('tagion_document_valid');
  late final _tagion_document_valid = _tagion_document_validPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Int32>)>();

  int tagion_document_array(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    int index,
    ffi.Pointer<Element> element,
  ) {
    return _tagion_document_array(
      buf,
      buf_len,
      index,
      element,
    );
  }

  late final _tagion_document_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Uint64, ffi.Uint64,
              ffi.Pointer<Element>)>>('tagion_document_array');
  late final _tagion_document_array = _tagion_document_arrayPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, int, int, ffi.Pointer<Element>)>();

  int tagion_document_get_text(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    int text_format,
    ffi.Pointer<ffi.Pointer<ffi.Char>> str,
    ffi.Pointer<ffi.Uint64> str_len,
  ) {
    return _tagion_document_get_text(
      buf,
      buf_len,
      text_format,
      str,
      str_len,
    );
  }

  late final _tagion_document_get_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64,
              ffi.Int32,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_text');
  late final _tagion_document_get_text =
      _tagion_document_get_textPtr.asFunction<
          int Function(ffi.Pointer<ffi.Uint8>, int, int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_get_document(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> buf,
    ffi.Pointer<ffi.Uint64> buf_len,
  ) {
    return _tagion_document_get_document(
      element,
      buf,
      buf_len,
    );
  }

  late final _tagion_document_get_documentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_document');
  late final _tagion_document_get_document =
      _tagion_document_get_documentPtr.asFunction<
          int Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>, ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_get_string(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Pointer<ffi.Char>> value,
    ffi.Pointer<ffi.Uint64> str_len,
  ) {
    return _tagion_document_get_string(
      element,
      value,
      str_len,
    );
  }

  late final _tagion_document_get_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_string');
  late final _tagion_document_get_string =
      _tagion_document_get_stringPtr.asFunction<
          int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_get_binary(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> buf,
    ffi.Pointer<ffi.Uint64> buf_len,
  ) {
    return _tagion_document_get_binary(
      element,
      buf,
      buf_len,
    );
  }

  late final _tagion_document_get_binaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_binary');
  late final _tagion_document_get_binary =
      _tagion_document_get_binaryPtr.asFunction<
          int Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>, ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_get_time(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.LongLong> time,
  ) {
    return _tagion_document_get_time(
      element,
      time,
    );
  }

  late final _tagion_document_get_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.LongLong>)>>('tagion_document_get_time');
  late final _tagion_document_get_time =
      _tagion_document_get_timePtr.asFunction<
          int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.LongLong>)>();

  int tagion_document_get_bigint(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> bigint_buf,
    ffi.Pointer<ffi.Uint64> bigint_buf_len,
  ) {
    return _tagion_document_get_bigint(
      element,
      bigint_buf,
      bigint_buf_len,
    );
  }

  late final _tagion_document_get_bigintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_bigint');
  late final _tagion_document_get_bigint =
      _tagion_document_get_bigintPtr.asFunction<
          int Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>, ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_get_bool(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Bool> value,
  ) {
    return _tagion_document_get_bool(
      element,
      value,
    );
  }

  late final _tagion_document_get_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Bool>)>>('tagion_document_get_bool');
  late final _tagion_document_get_bool = _tagion_document_get_boolPtr
      .asFunction<int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Bool>)>();

  int tagion_document_get_int32(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Int32> value,
  ) {
    return _tagion_document_get_int32(
      element,
      value,
    );
  }

  late final _tagion_document_get_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Int32>)>>('tagion_document_get_int32');
  late final _tagion_document_get_int32 = _tagion_document_get_int32Ptr
      .asFunction<int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Int32>)>();

  int tagion_document_get_int64(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Int64> value,
  ) {
    return _tagion_document_get_int64(
      element,
      value,
    );
  }

  late final _tagion_document_get_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Int64>)>>('tagion_document_get_int64');
  late final _tagion_document_get_int64 = _tagion_document_get_int64Ptr
      .asFunction<int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Int64>)>();

  int tagion_document_get_uint32(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Uint32> value,
  ) {
    return _tagion_document_get_uint32(
      element,
      value,
    );
  }

  late final _tagion_document_get_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Uint32>)>>('tagion_document_get_uint32');
  late final _tagion_document_get_uint32 =
      _tagion_document_get_uint32Ptr.asFunction<
          int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Uint32>)>();

  int tagion_document_get_uint64(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Uint64> value,
  ) {
    return _tagion_document_get_uint64(
      element,
      value,
    );
  }

  late final _tagion_document_get_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_document_get_uint64');
  late final _tagion_document_get_uint64 =
      _tagion_document_get_uint64Ptr.asFunction<
          int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Uint64>)>();

  int tagion_document_get_float32(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Float> value,
  ) {
    return _tagion_document_get_float32(
      element,
      value,
    );
  }

  late final _tagion_document_get_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Float>)>>('tagion_document_get_float32');
  late final _tagion_document_get_float32 = _tagion_document_get_float32Ptr
      .asFunction<int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Float>)>();

  int tagion_document_get_float64(
    ffi.Pointer<Element> element,
    ffi.Pointer<ffi.Double> value,
  ) {
    return _tagion_document_get_float64(
      element,
      value,
    );
  }

  late final _tagion_document_get_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<Element>,
              ffi.Pointer<ffi.Double>)>>('tagion_document_get_float64');
  late final _tagion_document_get_float64 =
      _tagion_document_get_float64Ptr.asFunction<
          int Function(ffi.Pointer<Element>, ffi.Pointer<ffi.Double>)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

final class Element extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;
}

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int USER_ADDR_NULL = 0;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int __bool_true_false_are_defined = 1;

const int true1 = 1;

const int false1 = 0;
